Added Stasis Module patches